# grid-pathfinding2

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  demo_image.py  demo_many_agents.py  demo_many_agents_prefer_traversed.py  pyproject.toml
.github/workflows/: main.yml
pathfinding/: __init__.py  _pygame_colordict.py  agent.py  grid.py  grid_ref.py  image_renderer.py  priority_queue.py
tests/: test_agent.py  test_grid.py
